Partial implementation of the user interface

--- a/src/app/features/customers/delete-account/delete-account.component.html
+++ b/src/app/features/customers/delete-account/delete-account.component.html
@@ -41,7 +41,7 @@
               <button mat-raised-button
                 [disabled]="!isConfirmDeleteAccount"
                 (click)="permanentlyDeleteAccount()"
-                color="primary">Eu entendo as consequências, exclua minha conta</button>
+                color="primary">Eu entendo as consequências. Exclua minha conta</button>
             </div>
           </div>
         </div>
