Implementation of the user interface

--- a/src/app/features/about/about-page/about-page.component.html
+++ b/src/app/features/about/about-page/about-page.component.html
@@ -3,7 +3,8 @@
 
     <mat-card>
       <mat-card-content>
-        <h2>Sobre</h2>
+        <h1>Troca Óleo</h1>
+        <span>A troca de óleo inteligente</span>
         <p>
           Serviço de troca de óleo personalizada.
         </p>
