--- a/src/app/features/customers/send-price-quote/send-price-quote.component.html
+++ b/src/app/features/customers/send-price-quote/send-price-quote.component.html
@@ -27,6 +27,7 @@
             <section class="ckeckbox-section">
               <mat-checkbox class="ckeckbox-margin">Troca de Oleo</mat-checkbox>
               <mat-checkbox class="ckeckbox-margin">Troca de Filtro de Óleo</mat-checkbox>
+              <mat-checkbox class="ckeckbox-margin">Troca de Filtro de Combustível</mat-checkbox>
             </section>
           </div>
         </div>
