--- a/src/app/features/customers/ty-price-quote/ty-price-quote.component.html
+++ b/src/app/features/customers/ty-price-quote/ty-price-quote.component.html
@@ -2,9 +2,11 @@
   <mat-card style="max-width: 80%; margin: 10px;">
     <mat-card-title>Cotação de Preço</mat-card-title>
     <mat-card-subtitle>
-      A sua cotação de preço foi enviada com sucesso.<br>
-      A Troca Óleo irá gerar uma cotação de preço personalizada e logo que possível você será
-      notificado por e-mail.
+      Obrigado por utilizar o serviço de cotação de preço.<br>
+      A sua cotação de preço foi enviada com sucesso.
+      <p>A Troca Óleo irá gerar uma cotação de preço personalizada e logo que possível você poderá<br>
+        realizar o agendamento da execução da troca de óleo do seu veículo caso a cotação esteja de acordo com o seu orçamento.</p>
+
     </mat-card-subtitle>
     <mat-card-content></mat-card-content>
   </mat-card>
