--- a/src/app/features/frontPage/frontPage-home/frontPage-home.component.html
+++ b/src/app/features/frontPage/frontPage-home/frontPage-home.component.html
@@ -23,7 +23,7 @@
       <li>Esperar a execução da troca de óleo em um ambiente confortável</li>
     </ul>
     <p>Gostou? Então está esperando o que?<br>
-      Faça já o seu <a style="text-decoration: none" href="customers/registration">cadastro</a>
+      Faça já o seu <a style="text-decoration: none" routerLink="customers/registration">cadastro</a>
       para ter acesso a todas essas comodidades.
     </p>
   </mat-card-content>
