--- a/src/app/features/company/purchase-order-list/purchase-order-list.component.html
+++ b/src/app/features/company/purchase-order-list/purchase-order-list.component.html
@@ -47,6 +47,11 @@
             <td mat-cell *matCellDef="let element"> {{element.endServiceExecution}} </td>
           </ng-container>
 
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+          </ng-container>
+
           <ng-container matColumnDef="detalhes">
             <th mat-header-cell *matHeaderCellDef> Detalhes </th>
             <td mat-cell *matCellDef="let element">
