--- a/src/app/features/frontPage/frontPage-home/frontPage-home.component.css
+++ b/src/app/features/frontPage/frontPage-home/frontPage-home.component.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: rgb(59, 119, 240);
+  background-color: #3f51b5;
   color: white;
   font-family: cursive;
   padding: 10px;
