--- a/src/app/features/customers/vehicle-list/vehicle-list.component.html
+++ b/src/app/features/customers/vehicle-list/vehicle-list.component.html
@@ -18,14 +18,14 @@
           </div>
         </div>
         <table mat-table [dataSource]="dataSource" matSort>
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-          </ng-container>
-
           <ng-container matColumnDef="model">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Modelo </th>
             <td mat-cell *matCellDef="let element"> {{element.model}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="brand">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Marca </th>
+            <td mat-cell *matCellDef="let element"> {{element.brand}} </td>
           </ng-container>
 
           <ng-container matColumnDef="year">
