--- a/src/app/shared/features/customer-registration/customer-registration.component.html
+++ b/src/app/shared/features/customer-registration/customer-registration.component.html
@@ -6,6 +6,7 @@
   </div>
 </div>
 
+<form [formGroup]="customerRegistrationForm" (ngSubmit)="onSubmit()" novalidate>
 <div fxlayout="row" fxLayoutAlign="center">
   <mat-card style="max-width: 80%; margin: 10px;">
     <mat-card-title>Cadastro</mat-card-title>
@@ -14,151 +15,235 @@
       experimente os novos benefícios.
     </mat-card-subtitle>
     <mat-card-content>
-      <form [formGroup]="customerRegistrationForm" (ngSubmit)="submitForm()" novalidate>
-        <div fxLayout="row" fxLayoutGap="10">
-          <div fxFlex="50%">
-            <mat-form-field class="mat-form-field-100" appearance="fill">
-              <mat-label>Nome</mat-label>
-              <input matInput formControlName="name">
-              <mat-error *ngIf="errorHandling('name', 'required')">
-                O campo <strong>Nome</strong> é obrigatório.
-              </mat-error>
-            </mat-form-field>
-          </div>
-          <div fxFlex="50%">
-            <mat-form-field class="mat-form-field-50" appearance="fill">
-              <mat-label>CPF</mat-label>
-              <input matInput formControlName="cpf">
-            </mat-form-field>
-          </div>
+
+      <div fxLayout="row" fxLayoutGap="10">
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-100" appearance="fill">
+            <mat-label>Nome</mat-label>
+            <input matInput formControlName="name" maxlength="100">
+            <mat-error *ngIf="errorHandling('name', 'required')">
+              O campo <strong>Nome</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
         </div>
-        <div fxLayout="row" fxLayoutGap="10">
-          <div fxFlex="50%">
-            <mat-form-field class="mat-form-field-50" appearance="fill">
-              <mat-label>Sexo</mat-label>
-              <mat-select formControlName="gender">
-                <mat-option *ngFor="let item of genders" [value]="item.id">{{ item.name }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-          <div fxFlex="50%">
-            <mat-form-field class="mat-form-field-20 margin-10" appearance="fill">
-              <mat-label>DDD</mat-label>
-              <input matInput formControlName="ddd">
-            </mat-form-field>
-            <mat-form-field class="mat-form-field-30" appearance="fill">
-              <mat-label>* Telefone</mat-label>
-              <input matInput formControlName="phone">
-            </mat-form-field>
-          </div>
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-50" appearance="fill">
+            <mat-label>CPF</mat-label>
+            <input matInput formControlName="cpf" maxlength="14">
+            <mat-error *ngIf="errorHandling('cpf', 'required')">
+              O campo <strong>CPF</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
         </div>
-        <div fxLayout="row" fxLayoutGap="10">
-          <div fxFlex="50%">
-            <mat-form-field class="mat-form-field-100" appearance="fill">
-              <mat-label>E-mail</mat-label>
-              <input matInput formControlName="email">
-            </mat-form-field>
-          </div>
-          <div fxFlex="50%">
-            <mat-form-field class="mat-form-field-50" appearance="fill">
-              <mat-label>Senha</mat-label>
-              <input type="password" matInput formControlName="password">
-            </mat-form-field>
-          </div>
+      </div>
+      <div fxLayout="row" fxLayoutGap="10">
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-50" appearance="fill">
+            <mat-label>Sexo</mat-label>
+            <mat-select formControlName="gender">
+              <mat-option *ngFor="let item of genders" [value]="item.id">{{ item.name }}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="errorHandling('gender', 'required')">
+              O campo <strong>Sexo</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
         </div>
-        <div fxLayout="row" fxLayoutGap="10">
-          <div fxFlex="100%">
-            <mat-form-field class="mat-form-field-100" appearance="fill">
-              <mat-label>Endereço</mat-label>
-              <input matInput formControlName="address">
-            </mat-form-field>
-          </div>
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-20 margin-10" appearance="fill">
+            <mat-label>DDD</mat-label>
+            <input matInput formControlName="ddd" maxlength="2">
+            <mat-error *ngIf="errorHandling('ddd', 'required')">
+              O campo <strong>DDD</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field class="mat-form-field-30" appearance="fill">
+            <mat-label>* Telefone</mat-label>
+            <input matInput formControlName="phone" maxlength="10">
+            <mat-error *ngIf="errorHandling('phone', 'required')">
+              O campo <strong>Telefone</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
         </div>
-        <div fxLayout="row" fxLayoutGap="10">
-          <div fxFlex="50%">
-            <mat-form-field class="mat-form-field-100" appearance="fill">
-              <mat-label>Complemento</mat-label>
-              <input matInput formControlName="complement">
-            </mat-form-field>
-          </div>
-          <div fxFlex="50%">
-            <mat-form-field class="mat-form-field-100" appearance="fill">
-              <mat-label>Bairro</mat-label>
-              <input matInput formControlName="neighborhood">
-            </mat-form-field>
-          </div>
+      </div>
+      <div fxLayout="row" fxLayoutGap="10">
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-100" appearance="fill">
+            <mat-label>E-mail</mat-label>
+            <input matInput formControlName="email" maxlength="90">
+            <mat-error *ngIf="errorHandling('email', 'required')">
+              O campo <strong>E-mail</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
         </div>
-        <div fxLayout="row" fxLayoutGap="10">
-          <div fxFlex="50%">
-            <mat-form-field class="mat-form-field-100" appearance="fill">
-              <mat-label>Município</mat-label>
-              <input matInput formControlName="county">
-            </mat-form-field>
-          </div>
-          <div fxFlex="50%">
-            <mat-form-field class="mat-form-field-20 margin-10" appearance="fill">
-              <mat-label>UF</mat-label>
-              <input matInput formControlName="uf">
-            </mat-form-field>
-            <mat-form-field class="mat-form-field-30" appearance="fill">
-              <mat-label>CEP</mat-label>
-              <input matInput formControlName="zipCode">
-            </mat-form-field>
-          </div>
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-50" appearance="fill">
+            <mat-label>Login</mat-label>
+            <input matInput formControlName="login" maxlength="20">
+            <mat-error *ngIf="errorHandling('login', 'required')">
+              O campo <strong>Login</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
         </div>
-        <div fxLayout="row">
-          <mat-card>
-            <mat-card-title>Veículo</mat-card-title>
-            <mat-card-subtitle>
-              Cadastre o seu veículo. Após a aprovação do seu cadastro, você terá a oportunidade
-              de cadastrar outros veículos.
-            </mat-card-subtitle>
-            <mat-card-content>
-              <div fxLayout="row" fxLayoutGap="10">
-                <div fxFlex="50%">
-                  <mat-form-field class="mat-form-field-50" appearance="fill">
-                    <mat-label>Marca</mat-label>
-                    <mat-select formControlName="brand">
-                      <mat-option *ngFor="let item of vehicleBrands" [value]="item.id">{{ item.name }}</mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-                <div fxFlex="50%">
-                  <mat-form-field class="mat-form-field-50" appearance="fill">
-                    <mat-label>Modelo</mat-label>
-                    <mat-select formControlName="model">
-                      <mat-option *ngFor="let item of vehicleModels" [value]="item.id" >{{ item.name }}</mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
+      </div>
+      <div fxLayout="row" fxLayoutGap="10">
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-50" appearance="fill">
+            <mat-label>Senha</mat-label>
+            <input type="password" matInput formControlName="password" maxlength="20">
+            <mat-error *ngIf="errorHandling('password', 'required')">
+              O campo <strong>Senha</strong> é obrigatório.
+            </mat-error>
+            <mat-error *ngIf="errorHandling('password', 'minlength')">
+              Informe uma senha com pelo menos 8 caracteres.
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-50" appearance="fill">
+            <mat-label>Confirmar senha</mat-label>
+            <input type="password" matInput formControlName="confirmPassword" maxlength="20">
+            <mat-error *ngIf="errorHandling('confirmPassword', 'required')">
+              O campo <strong>Confirmar senha</strong> é obrigatório.
+            </mat-error>
+            <mat-error *ngIf="errorHandling('confirmPassword', 'matching')">
+              A confirmação da senha não é válida.
+            </mat-error>
+            <mat-error *ngIf="errorHandling('password', 'minlength')">
+              Informe uma senha com pelo menos 8 caracteres.
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxLayout="row" fxLayoutGap="10">
+        <div fxFlex="100%">
+          <mat-form-field class="mat-form-field-100" appearance="fill">
+            <mat-label>Endereço</mat-label>
+            <input matInput formControlName="address" maxlength="100">
+            <mat-error *ngIf="errorHandling('address', 'required')">
+              O campo <strong>Endereço</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxLayout="row" fxLayoutGap="10">
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-100" appearance="fill">
+            <mat-label>Complemento</mat-label>
+            <input matInput formControlName="complement" maxlength="30">
+          </mat-form-field>
+        </div>
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-100" appearance="fill">
+            <mat-label>Bairro</mat-label>
+            <input matInput formControlName="neighborhood" maxlength="50">
+            <mat-error *ngIf="errorHandling('neighborhood', 'required')">
+              O campo <strong>Bairro</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxLayout="row" fxLayoutGap="10">
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-100" appearance="fill">
+            <mat-label>Município</mat-label>
+            <input matInput formControlName="county" maxlength="50">
+            <mat-error *ngIf="errorHandling('county', 'required')">
+              O campo <strong>Município</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div fxFlex="50%">
+          <mat-form-field class="mat-form-field-20 margin-10" appearance="fill">
+            <mat-label>UF</mat-label>
+            <input matInput formControlName="uf" maxlength="2">
+            <mat-error *ngIf="errorHandling('uf', 'required')">
+              O campo <strong>UF</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field class="mat-form-field-30" appearance="fill">
+            <mat-label>CEP</mat-label>
+            <input matInput formControlName="zipCode" maxlength="10">
+            <mat-error *ngIf="errorHandling('zipCode', 'required')">
+              O campo <strong>CEP</strong> é obrigatório.
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxLayout="row">
+        <mat-card>
+          <mat-card-title>Veículo</mat-card-title>
+          <mat-card-subtitle>
+            Cadastre o seu veículo. Após a aprovação do seu cadastro, você terá a oportunidade
+            de cadastrar outros veículos.
+          </mat-card-subtitle>
+          <mat-card-content>
+            <div fxLayout="row" fxLayoutGap="10">
+              <div fxFlex="50%">
+                <mat-form-field class="mat-form-field-50" appearance="fill">
+                  <mat-label>Placa</mat-label>
+                  <input matInput formControlName="licencePlate" maxlength="15">
+                </mat-form-field>
               </div>
-              <div fxLayout="row" fxLayoutGap="10">
-                <div fxFlex="50%">
-                  <mat-form-field class="mat-form-field-50" appearance="fill">
-                    <mat-label>Ano</mat-label>
-                    <mat-select formControlName="year">
-                      <mat-option *ngFor="let item of vehicleYears" [value]="item.id">{{ item.name }}</mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-                <div fxFlex="50%">
-                  <mat-form-field class="mat-form-field-50" appearance="fill">
-                    <mat-label>Combustível</mat-label>
-                    <mat-select formControlName="fuel">
-                      <mat-option *ngFor="let item of vehicleFuels" [value]="item.id">{{ item.name }}</mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
+            </div>
+            <div fxLayout="row" fxLayoutGap="10">
+              <div fxFlex="50%">
+                <mat-form-field class="mat-form-field-50" appearance="fill">
+                  <mat-label>Marca</mat-label>
+                  <mat-select formControlName="brandId">
+                    <mat-option *ngFor="let item of vehicleBrands" [value]="item.id">{{ item.name }}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="errorHandling('brandId', 'required')">
+                    O campo <strong>Marca</strong> é obrigatório.
+                  </mat-error>
+                </mat-form-field>
               </div>
-            </mat-card-content>
-          </mat-card>
-        </div>
-      </form>
+              <div fxFlex="50%">
+                <mat-form-field class="mat-form-field-50" appearance="fill">
+                  <mat-label>Modelo</mat-label>
+                  <mat-select formControlName="modelId">
+                    <mat-option *ngFor="let item of vehicleModels" [value]="item.id">{{ item.name }}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="errorHandling('modelId', 'required')">
+                    O campo <strong>Modelo</strong> é obrigatório.
+                  </mat-error>
+                </mat-form-field>
+              </div>
+            </div>
+            <div fxLayout="row" fxLayoutGap="10">
+              <div fxFlex="50%">
+                <mat-form-field class="mat-form-field-50" appearance="fill">
+                  <mat-label>Ano</mat-label>
+                  <mat-select formControlName="yearId">
+                    <mat-option *ngFor="let item of vehicleYears" [value]="item.id">{{ item.name }}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="errorHandling('yearId', 'required')">
+                    O campo <strong>Ano</strong> é obrigatório.
+                  </mat-error>
+                </mat-form-field>
+              </div>
+              <div fxFlex="50%">
+                <mat-form-field class="mat-form-field-50" appearance="fill">
+                  <mat-label>Combustível</mat-label>
+                  <mat-select formControlName="fuelId">
+                    <mat-option *ngFor="let item of vehicleFuels" [value]="item.id">{{ item.name }}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="errorHandling('fuelId', 'required')">
+                    O campo <strong>Combustível</strong> é obrigatório.
+                  </mat-error>
+                </mat-form-field>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+
     </mat-card-content>
     <mat-card-actions>
       <div fxlayout="row" fxLayoutAlign="end">
-        <button mat-raised-button (click)="createCustomer()" color="primary">Enviar</button>
+        <button type="submit" mat-raised-button [disabled]="customerRegistrationForm.invalid"
+          color="primary">Enviar</button>
       </div>
     </mat-card-actions>
   </mat-card>
 </div>
+</form>
